--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,30 @@
 anyio==3.6.2
-appdirs==1.4.4
-argcomplete==2.0.0
 asgiref==3.6.0
-astroid==2.14.2
-asttokens==2.2.1
 attrs==22.2.0
-av==12.3.0
 Babel==2.10.3
-backcall==0.2.0
 beautifulsoup4==4.11.2
-beniget==0.4.1
 blinker==1.5
 Brotli==1.0.9
-bytecode==0.14.0
 certifi==2022.9.24
 chardet==5.1.0
-charset-normalizer==3.0.1
+charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.6
 colorzero==2.0
 contextlib2==0.6.0.post1
 contourpy==1.0.7
-coverage==6.5.0
 cryptography==38.0.4
-cupshelpers==1.0
 cycler==0.11.0
-dbus-python==1.3.2
-debugpy==1.6.3+git20221103.a2a3328
-decorator==5.1.1
-dill==0.3.6
-distlib==0.3.6
-distro==1.8.0
 dnspython==2.3.0
 docutils==0.19
 entrypoints==0.4
-executing==1.2.0
-filelock==3.9.0
 Flask==2.2.2
 fonttools==4.38.0
-fs==2.4.16
 future==0.18.2
 gast==0.5.2
-gpg==1.18.0
-gpiozero==2.0.1
 guizero==1.4.0
 h11==0.14.0
 h2==4.1.0
-hailort==4.20.0
 hpack==4.0.0
 html5lib==1.1
 httpcore==0.16.3
@@ -55,131 +33,60 @@ httpx==0.23.3
 hyperframe==6.0.0
 idna==3.3
 importlib-metadata==4.12.0
-ipykernel==6.17.0
-ipython==8.5.0
-ipython_genutils==0.2.0
-isort==5.6.4
 itsdangerous==2.1.2
-jedi==0.18.2
 Jinja2==3.1.2
 jsonpointer==2.3
 jsonschema==4.10.3
-jupyter_client==7.4.9
-jupyter_core==4.12.0
-kiwisolver==0.0.0
-lazr.restfulclient==0.14.5
-lazr.uri==1.0.6
-lazy-object-proxy==1.9.0
-lgpio==0.2.2.0
-libarchive-c==2.9
-libevdev==0.5
-logilab-common==1.9.8
+kiwisolver
 lxml==4.9.2
-lz4==4.0.2+dfsg
-Mako==1.2.4.dev0
+Mako
 Markdown==3.4.1
 markdown-it-py==2.1.0
 MarkupSafe==2.1.2
 matplotlib==3.6.3
-matplotlib-inline==0.1.6
-mccabe==0.7.0
 mdurl==0.1.2
-meson==1.5.1
 more-itertools==8.10.0
-mpmath==0.0.0
+mpmath
 mutagen==1.46.0
-mypy==1.0.1
-mypy-extensions==0.4.3
 nest-asyncio==1.5.4
 netaddr==0.8.0
-netifaces==0.11.0
 nudatus==0.0.5
 numpy==1.24.2
 oauthlib==3.2.2
 olefile==0.46
+opencv-python
 packaging==23.0
-parso==0.8.3
-pexpect==4.8.0
-pgzero==1.2
-picamera2==0.3.30
-pickleshare==0.7.5
-pidng==4.0.9
 piexif==1.1.3
-pigpio==1.78
 Pillow==9.4.0
-platformdirs==2.6.0
-ply==3.11
-prompt-toolkit==3.0.36
 psutil==5.9.4
-ptyprocess==0.7.0
-pure-eval==0.0.0
+pure-eval
 py==1.11.0
-pycairo==1.20.1
-pycodestyle==2.10.0
 pycryptodomex==3.11.0
-pycups==2.0.1
-pydevd==2.9.5
-pyflakes==2.5.0
-pygame==2.1.2
 Pygments==2.14.0
-PyGObject==3.42.2
 pyinotify==0.9.6
 PyJWT==2.6.0
-pylint==2.16.2
-PyOpenGL==3.1.6
 pyOpenSSL==23.0.0
 pyparsing==3.0.9
-PyQt5==5.15.9
-PyQt5-sip==12.11.1
-PyQtWebEngine==5.15.6
 pyrsistent==0.18.1
 pyserial==3.5
-pysmbc==1.0.23
-python-apt==2.6.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
-python-prctl==1.8.1
 pythran==0.11.0
 pytz==2022.7.1
-pyudev==0.24.0
-pyxattr==0.8.1
-PyYAML==6.0
 pyzmq==24.0.1
-QScintilla==2.13.3
-qtconsole==5.4.0
-QtPy==2.3.0
-reportlab==3.6.12
 requests==2.28.1
-requests-oauthlib==1.3.0
 requests-toolbelt==0.10.1
-responses==0.18.0
-rfc3986==1.5.0
-rfc3987==1.3.8
 rich==13.3.1
-roman==3.3
-RPi.GPIO==0.7.1a4
-RTIMULib==7.2.1
 scipy==1.10.1
+scikit-image
 semver==2.10.2
-Send2Trash==1.8.1b0
-sense-emu==1.2.2
-sense-hat==2.6.0
-simplejpeg==1.8.1
 simplejson==3.18.3
 six==1.16.0
-smbus2==0.4.2
 sniffio==1.2.0
 soupsieve==2.3.2
-spidev==3.5
-ssh-import-id==5.10
-stack-data==0.6.2
 sympy==1.11.1
-thonny==4.1.4
 toml==0.10.2
-tomlkit==0.11.7
 tornado==6.2
-tqdm==4.64.1
-traitlets==5.5.0
 twython==3.8.2
 types-aiofiles==22.1
 types-annoy==1.17
@@ -197,7 +104,6 @@ types-certifi==2021.10.8
 types-cffi==1.15
 types-chardet==5.0
 types-chevron==0.14
-types-click-spinner==0.1
 types-colorama==0.4
 types-commonmark==0.9
 types-console-menu==0.7
@@ -272,7 +178,6 @@ types-pynput==1.7
 types-pyOpenSSL==22.1
 types-pyRFC3339==1.1
 types-PyScreeze==0.1
-types-pysftp==0.2
 types-pytest-lazy-fixture==0.6
 types-python-crontab==2.6
 types-python-dateutil==2.8
@@ -316,20 +221,11 @@ types-xmltodict==0.13
 types-xxhash==3.0
 types-zxcvbn==4.4
 typing_extensions==4.4.0
-uflash==1.2.4
 ufoLib2==0.14.0
 uritemplate==4.1.1
 urllib3==1.26.12
-v4l2-python3==0.3.5
-videodev2==0.0.4
-virtualenv==20.17.1+ds
-wadllib==1.3.6
-wcwidth==0.2.5
 webcolors==1.11.1
 webencodings==0.5.1
 websockets==10.4
 Werkzeug==2.2.2
-wrapt==1.14.1
-wxPython==4.2.0
-yt-dlp==2023.3.4
 zipp==1.0.0
